--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ requests                # Gửi request HTTP cơ bản (nếu cần)
 ollama                  # Giao tiếp với Llama 3.1 trên Workstation
 
 # --- TÌM KIẾM & THU THẬP DỮ LIỆU ---
-duckduckgo-search       # "Đôi mắt" - Tìm kiếm Google/DuckDuckGo
+ddgs                    # "Đôi mắt" - Tìm kiếm Google/DuckDuckGo
 playwright              # "Cánh tay" - Trình duyệt ảo để crawl web
 beautifulsoup4          # Làm sạch HTML trước khi đưa cho AI đọc
 lxml                    # Bộ parser xử lý HTML cực nhanh cho BeautifulSoup
